# inputlayer

./: .dockerignore  .env.example  .gitignore  .inputlayer-credentials.toml  .out  BENCHMARKS.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  GUI_INTEGRATION_PLAN.md  LICENSE  Makefile  NOTICE  README.md  REVIEW_FINDINGS.md  TESTING.md  config.example.toml  config.toml  deny.toml  docker-compose-no-tls.yml  docker-compose.yml  gui_tasks.md  plan.md  tasks.md  typing_support.md
.github/workflows/: benchmarks.yml  ci.yml  docker.yml  docs.yml  publish-npm.yml  publish-pypi.yml  publish.yml
benches/: aggregation_benchmarks.rs  insert_benchmarks.rs  production_benchmarks.rs  query_benchmarks.rs
certs/: .gitignore  generate.sh
content/blog/: access-control-as-a-rule.mdx  benchmarks-1587x-faster-recursive-queries.mdx  building-product-recommendation-engine.mdx  correct-retraction-why-delete-should-actually-delete.mdx  explainable-ai-data-layer.mdx  fraud-detection-entity-chain-reasoning.mdx  inputlayer-in-10-minutes.mdx  langgraph-agent-memory.mdx  policy-filtered-semantic-search.mdx  when-similarity-is-not-enough.mdx  why-agents-use-stale-data.mdx  why-vector-search-alone-fails.mdx  why-we-built-on-differential-dataflow.mdx
content/compare/: vs-all-in-one-ai-data.mdx  vs-graph-databases.mdx  vs-vector-databases.mdx
content/customers/: semantic-image-knowledge-graph.mdx  warehouse-optimization.mdx
content/use-cases/: agentic-ai.mdx  commerce.mdx  financial-risk.mdx  financial-services.mdx  manufacturing.mdx  retail-commerce-ai.mdx  supply-chain.mdx
crates/datalog_ir/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/datalog_ir/src/: lib.rs
demo/: .env.example  Caddyfile  Dockerfile  docker-compose.yml  package-lock.json  package.json
demo/seeds/: default.idl  flights.idl  flights.iql  incremental.idl  provenance.idl  retraction.idl  rules_vectors.idl
demo/src/: admin-client.ts  config.ts  db.ts  email.ts  index.ts  proxy.ts  routes.ts  seeder.ts
docs/: PLAN-standard-datalog-support.md  PRODUCTION_READINESS_PLAN.md  README.md  ROADMAP.md  TEST_COVERAGE_GAPS.md  TEST_EXECUTION_METHODOLOGY.md  TEST_IMPLEMENTATION_PLAN.md  cheatsheet.md  coding_standards.md  features.md  review.md
docs/content/: _meta.json  index.mdx
docs/datalog-specs/: SUMMARY.md
docs/design/: validation-layer.md
docs/getting-started/: 01-installation.md  02-first-program.md  03-core-concepts.md  04-repl-guide.md
docs/grammars/: datalog.tmLanguage.json  iql.tmLanguage.json
docs/guide/: data-modeling.md
docs/guides/: README.md  configuration.md  core-concepts.md  first-program.md  indexing.md  installation.md  persistence.md  python-sdk.md  quickstart.md  recursion.md  repl.md  rest-api.md  temporal.md  tls-deployment.md  troubleshooting.md  vectors.md
docs/internals/: README.md  architecture.md  coding-standards.md  record-syntax.md  roadmap.md  type-system.md  validation.md
docs/reference/: README.md  aggregations.md  commands.md  functions.md  syntax-cheatsheet.md  syntax.md
docs/site/: next.config.js  package.json  theme.config.tsx
docs/spec/: README.md  asyncapi.yaml  basic-concepts.md  errors.md  grammar.md  openapi.yaml  queries.md  rules.md  syntax.md  types.md
docs/troubleshooting/: common-errors.md
docs/tutorials/: 01-basic-queries.md  02-recursion.md
examples/: parallel_queries.rs  storage_demo.rs
examples/datalog/: LEARNING_PATH.md  README.md
examples/iql/: LEARNING_PATH.md  README.md
examples/retail/: README.md  printer-ink.idl
examples/rust/: debug_recursive.rs  join_query.rs  pipeline_demo.rs  pipeline_trace_demo.rs  simple_query.rs
front/: package-lock.json  package.json  tsconfig.tsbuildinfo
front/app/: globals.css  layout.tsx  page.tsx
front/components/: blog-card.tsx  comparison-table.tsx  content-hero.tsx  cta-banner.tsx  diagrams.tsx  docs-layout.tsx  docs-nav.tsx  docs-toc.tsx  landing-diagrams.tsx  logo.tsx  mdx-components.tsx  mobile-nav.tsx  newsletter-form.tsx  page-layout.tsx  rotating-hero.tsx  site-footer.tsx  site-header.tsx  stat-card.tsx
front/lib/: content-bundle.ts  syntax-highlight.ts
front/scripts/: bundle-content.mjs  bundle-docs.mjs
gui/: next.config.mjs  package.json  tsconfig.tsbuildinfo
gui/app/: globals.css  layout.tsx  page.tsx
gui/components/: app-shell.tsx  autocomplete-popup.tsx  connection-dialog.tsx  connection-screen.tsx  connection-status.tsx  docs-layout.tsx  docs-nav.tsx  empty-state.tsx  error-boundary.tsx  graph-canvas.tsx  graph-node-detail.tsx  graph-sidebar.tsx  header.tsx  keyboard-shortcuts-dialog.tsx  logo.tsx  mdx-components.tsx  minimal-header.tsx  proof-tree-panel.tsx  query-editor-panel.tsx  query-editor.tsx  query-history.tsx  query-result-graph.tsx  query-results-panel.tsx  query-results.tsx  query-sidebar.tsx  sidebar-nav.tsx  (+12 more)
scripts/: demo-deploy.sh  demo-local.sh  migrate_docs_syntax.py  preprocess-idl.py  run_snapshot_tests.sh  test-affected.sh
src/: auth.rs  bloom_filter.rs  catalog.rs  config.rs  dd_computation.rs  derived_relations.rs  hash_index.rs  hnsw_index.rs  incremental.rs  index_manager.rs  lib.rs  main.rs  pipeline_trace.rs  recursion.rs  rule_catalog.rs  semiring_types.rs  session.rs  statement.rs  statistics.rs  temporal_ops.rs  test_arithmetic.rs  vector_ops.rs  view_catalog.rs
tests/: advanced_integration_tests.rs  boundary_value_tests.rs  client_handler_tests.rs  concurrency_tests.rs  config_tests.rs  crash_recovery_tests.rs  datalog_syntax_tests.rs  error_handling_tests.rs  example_execution_tests.rs  example_verification.rs  flights_reachability_tests.rs  input_validation_tests.rs  integration_test.rs  iql_syntax_tests.rs  lock_stress_tests.rs  numeric_safety_tests.rs  optimizer_tests.rs  parallel_execution_tests.rs  property_arithmetic.rs  resource_limit_tests.rs  rest_api_tests.rs  serialization_tests.rs  server_startup_tests.rs  session_schema_tests.rs  storage_engine_tests.rs  vector_integration_tests.rs  why_not_tests.rs  why_provenance_tests.rs  write_concurrency_tests.rs  ws_session_tests.rs
(+5823 files in other folders)
