[workspace]
resolver = "2"
members = [
    "crates/datalog_ast",
    "crates/datalog_ir",
]

# The main package is defined below (virtual workspace pattern)
[package]
name = "inputlayer"
version = "0.1.0"
edition = "2021"
description = "A high-performance Datalog engine built on Differential Dataflow"
license = "Apache-2.0"
repository = "https://github.com/InputLayer/inputlayer"
homepage = "https://inputlayer.io"
documentation = "https://docs.inputlayer.io"
readme = "README.md"
keywords = ["datalog", "database", "query-engine", "differential-dataflow", "incremental"]
categories = ["database", "data-structures", "algorithms"]
authors = ["InputLayer Team"]
rust-version = "1.75"

[dependencies]
# Local workspace crates
datalog_ast = { path = "crates/datalog_ast" }
datalog_ir = { path = "crates/datalog_ir" }

# Differential Dataflow - incremental computation engine
differential-dataflow = "0.12"
timely = "0.12"
abomonation = "0.7"
abomonation_derive = "0.5"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Storage formats
parquet = "53.0"
arrow = "53.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"

# Parallel execution
rayon = "1.10"
num_cpus = "1.16"

# High-performance synchronization
parking_lot = "0.12"

# REPL readline support
rustyline = "14.0"

# RPC Protocol (QUIC + TLS)
rpcnet = "0.1"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
criterion = "0.5"

[[bin]]
name = "inputlayer"
path = "src/main.rs"

[[bin]]
name = "inputlayer-server"
path = "src/bin/server.rs"

[[bin]]
name = "inputlayer-client"
path = "src/bin/client.rs"

[[example]]
name = "simple_query"
path = "examples/rust/simple_query.rs"

[[example]]
name = "join_query"
path = "examples/rust/join_query.rs"

[[example]]
name = "pipeline_demo"
path = "examples/rust/pipeline_demo.rs"

[[example]]
name = "storage_demo"
path = "examples/storage_demo.rs"

[features]
default = []
# Enable vector similarity search operations
vectors = []
# Enable temporal/time-series operations
temporal = []
# Enable distributed execution
distributed = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
