[package]
name = "inputlayer"
version = "0.1.0"
edition = "2021"
description = "Streaming deductive knowledge graph for neuro-symbolic AI"
license = "Apache-2.0"
repository = "https://github.com/inputlayer/inputlayer"
homepage = "https://inputlayer.ai"
documentation = "https://docs.inputlayer.ai"
readme = "README.md"
keywords = ["datalog", "deductive-database", "knowledge-graph", "query-engine", "differential-dataflow", "incremental"]
categories = ["database", "knowledge-graph", "deductive-database,", "datalog", "data-structures", "algorithms"]
authors = ["InputLayer Team"]
rust-version = "1.75"

[dependencies]
# Differential Dataflow - incremental computation engine
differential-dataflow = "0.12"
timely = "0.12"
abomonation = "0.7"
abomonation_derive = "0.5"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Storage formats
parquet = "53.0"
arrow = "53.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"

# Parallel execution
rayon = "1.10"
num_cpus = "1.16"

# High-performance synchronization
parking_lot = "0.12"
arc-swap = "1.7"
dashmap = "5.5"

# REPL readline support
rustyline = "14.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"

# HTTP Framework (REST API + GUI serving)
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip", "trace"] }

# OpenAPI Documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Additional utilities for REST API
uuid = { version = "1", features = ["v4", "serde"] }
hyper = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
criterion = "0.5"

[[bin]]
name = "inputlayer"
path = "src/main.rs"

[[bin]]
name = "inputlayer-server"
path = "src/bin/server.rs"

[[bin]]
name = "inputlayer-client"
path = "src/bin/client.rs"

[[example]]
name = "simple_query"
path = "examples/rust/simple_query.rs"

[[example]]
name = "join_query"
path = "examples/rust/join_query.rs"

[[example]]
name = "pipeline_demo"
path = "examples/rust/pipeline_demo.rs"

[[example]]
name = "storage_demo"
path = "examples/storage_demo.rs"

[features]
default = []
# Enable vector similarity search operations
vectors = []
# Enable temporal/time-series operations
temporal = []
# Enable distributed execution
distributed = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[lints.rust]
# Note: unsafe_code is not forbidden because the Abomonation trait requires unsafe methods
# for serialization. The unsafe code is minimal and well-encapsulated in src/value/mod.rs.

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
