[package]
name = "inputlayer"
version = "0.1.0"
edition = "2021"
description = "Context graph for AI agents  - a streaming deductive database built on Differential Dataflow"
license = "Apache-2.0"
repository = "https://github.com/inputlayer/inputlayer"
homepage = "https://inputlayer.ai"
documentation = "https://docs.inputlayer.ai"
readme = "README.md"
keywords = ["datalog", "deductive-database", "knowledge-graph", "query-engine", "differential-dataflow", "incremental"]
categories = ["database-implementations", "data-structures", "algorithms"]
authors = ["InputLayer Team"]
rust-version = "1.88"

[dependencies]
# Differential Dataflow - incremental computation engine
differential-dataflow = "0.12"
timely = "0.12"
abomonation = "0.7"
abomonation_derive = "0.5"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Storage formats
parquet = "53.0"
arrow = "53.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"

# Channel for DD worker communication (already a transitive dep via timely)
crossbeam-channel = "0.5"

# HNSW vector indexing for similarity search
hnsw_rs = "0.3"

# Parallel execution
rayon = "1.10"
num_cpus = "1.16"

# High-performance synchronization
parking_lot = "0.12"
arc-swap = "1.7"
dashmap = "5.5"

# REPL readline support
rustyline = "14.0"

# PEG grammar for syntax highlighting
pest = "2.7"
pest_derive = "2.7"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bincode = "1.3"

# HTTP Framework (WebSocket API + GUI serving)
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Authentication (commented out — will be needed when auth is implemented)
# jsonwebtoken = "9"
# argon2 = "0.5"

# Additional utilities for HTTP API
uuid = { version = "1", features = ["v4", "serde"] }
# hyper = { version = "1.0", features = ["full"] }

# WebSocket stream splitting
futures-util = "0.3"

# WebSocket client (CLI)
tokio-tungstenite = "0.24"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
criterion = "0.5"

[[bin]]
name = "inputlayer"
path = "src/main.rs"

[[bin]]
name = "inputlayer-server"
path = "src/bin/server.rs"

[[bin]]
name = "inputlayer-client"
path = "src/bin/client.rs"

[[example]]
name = "simple_query"
path = "examples/rust/simple_query.rs"

[[example]]
name = "join_query"
path = "examples/rust/join_query.rs"

[[example]]
name = "pipeline_demo"
path = "examples/rust/pipeline_demo.rs"

[[example]]
name = "storage_demo"
path = "examples/storage_demo.rs"

[[bench]]
name = "query_benchmarks"
path = "benches/query_benchmarks.rs"
harness = false

[[bench]]
name = "insert_benchmarks"
path = "benches/insert_benchmarks.rs"
harness = false

[[bench]]
name = "aggregation_benchmarks"
path = "benches/aggregation_benchmarks.rs"
harness = false

[features]
default = []
# Enable vector similarity search operations
vectors = []
# Enable temporal/time-series operations
temporal = []
# Enable distributed execution
distributed = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[lints.rust]
# Note: unsafe_code is not forbidden because the Abomonation trait requires unsafe methods
# for serialization. The unsafe code is minimal and well-encapsulated in src/value/mod.rs.

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Pedantic lints that are noise for this codebase
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_fields_in_debug = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
match_same_arms = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
unused_async = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
too_many_arguments = "allow"
implicit_hasher = "allow"
return_self_not_must_use = "allow"
large_enum_variant = "allow"
struct_field_names = "allow"
manual_let_else = "allow"
only_used_in_recursion = "allow"
wildcard_imports = "allow"
single_match_else = "allow"
if_not_else = "allow"
items_after_statements = "allow"
enum_glob_use = "allow"
match_wildcard_for_single_variants = "allow"
doc_markdown = "allow"
unreadable_literal = "allow"
needless_continue = "allow"
redundant_else = "allow"
match_bool = "allow"
format_push_string = "allow"
manual_strip = "allow"
inefficient_to_string = "allow"
inherent_to_string = "allow"
should_implement_trait = "allow"
result_large_err = "allow"
type_complexity = "allow"
iter_without_into_iter = "allow"
needless_for_each = "allow"
ifs_same_cond = "allow"
if_same_then_else = "allow"
clone_on_ref_ptr = "allow"
doc_lazy_continuation = "allow"
string_lit_chars_any = "allow"
