[package]
name = "datalog_ir"
version = "0.2.0"
edition = "2021"
authors = ["Sam Hart"]
description = "Intermediate Representation types for Datalog query plans"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jsam/datalog_ir"
homepage = "https://github.com/jsam/datalog_ir"
documentation = "https://docs.rs/datalog_ir"
readme = "README.md"
keywords = ["datalog", "query", "ir", "database", "optimizer"]
categories = ["data-structures", "database"]
rust-version = "1.74"

[dependencies]

[dev-dependencies]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"
